// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssetLabeling /> should render properly 1`] = `
.emotion-0 {
  padding: 16px;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  Select an asset to add labels.
</div>
`;

exports[`<AssetLabeling /> should render with a selected asset 1`] = `
Array [
  .emotion-19 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-19:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-19:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-18 {
  width: 100%;
  background-color: #191919;
}

.emotion-17 {
  padding: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
  padding: 0;
}

.emotion-4 {
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  padding-bottom: 8px;
}

.emotion-5 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 100%;
  height: 40px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  padding-left: 12px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right 8px top 50%;
  background-size: 20px;
}

.emotion-11 {
  padding-top: 8px;
  width: 100%;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited {
  background-color: #808080;
}

.emotion-12:hover {
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true] {
  background-color: #808080;
}

.emotion-13 {
  padding: 8px;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited {
  background-color: #73b61c;
}

.emotion-14:hover {
  background-color: #96c955;
}

.emotion-14[aria-disabled=true] {
  background-color: #808080;
}

<div
    className="emotion-19"
  >
    <div
      className="emotion-3"
      onClick={[Function]}
      style={Object {}}
    >
      <button
        aria-label="Collapse Section"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-0"
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <h4
        className="emotion-2"
      >
        Select a model and add a label.
      </h4>
    </div>
    <div
      className="emotion-18"
    >
      <div
        className="emotion-17"
      >
        <form
          action=""
          className="emotion-16"
          method="post"
          onSubmit={[Function]}
        >
          <label
            className="emotion-4"
            htmlFor="models-list"
          >
            Model:
          </label>
          <div
            className="emotion-6"
          >
            <select
              className="emotion-5"
              defaultValue=""
              id="models-list"
              name="models-list"
              onChange={[Function]}
            >
              <option
                disabled={true}
                value=""
              >
                Select a model...
              </option>
              <option
                value="621bf774-89d9-1244-9596-d6df43f1ede5"
              >
                console_face_recognition
              </option>
              <option
                value="621bf774-89d9-9596-1244-d6df43f1ede5"
              >
                console_cat_recognition
              </option>
            </select>
          </div>
          <div
            className="emotion-11"
          >
            <label
              className="emotion-7"
              htmlFor="asset-label"
            >
              Label:
            </label>
            <div
              className="emotion-9"
            >
              <input
                className="emotion-8"
                disabled={false}
                id="asset-label"
                name="asset-label"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="emotion-10"
            >
               
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <button
              className="emotion-12"
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <div
              className="emotion-13"
            />
            <button
              aria-disabled={true}
              className="emotion-14"
              onClick={[Function]}
              type="submit"
            >
              Save Label
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  .emotion-6 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-6:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-6:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  width: 100%;
  background-color: #191919;
}

.emotion-4 {
  padding: 16px;
}

<div
    className="emotion-6"
  >
    <div
      className="emotion-3"
      onClick={[Function]}
      style={Object {}}
    >
      <button
        aria-label="Collapse Section"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-0"
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <h4
        className="emotion-2"
      >
        Asset Labels: 0
      </h4>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        List
      </div>
    </div>
  </div>,
]
`;

exports[`<AssetLabeling /> should render with a selected asset 2`] = `
Array [
  .emotion-19 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-19:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-19:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-18 {
  width: 100%;
  background-color: #191919;
}

.emotion-17 {
  padding: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
  padding: 0;
}

.emotion-4 {
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  padding-bottom: 8px;
}

.emotion-5 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 100%;
  height: 40px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  padding-left: 12px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right 8px top 50%;
  background-size: 20px;
}

.emotion-11 {
  padding-top: 8px;
  width: 100%;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited {
  background-color: #808080;
}

.emotion-12:hover {
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true] {
  background-color: #808080;
}

.emotion-13 {
  padding: 8px;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited {
  background-color: #73b61c;
}

.emotion-14:hover {
  background-color: #96c955;
}

.emotion-14[aria-disabled=true] {
  background-color: #808080;
}

<div
    className="emotion-19"
  >
    <div
      className="emotion-3"
      onClick={[Function]}
      style={Object {}}
    >
      <button
        aria-label="Collapse Section"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-0"
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <h4
        className="emotion-2"
      >
        Select a model and add a label.
      </h4>
    </div>
    <div
      className="emotion-18"
    >
      <div
        className="emotion-17"
      >
        <form
          action=""
          className="emotion-16"
          method="post"
          onSubmit={[Function]}
        >
          <label
            className="emotion-4"
            htmlFor="models-list"
          >
            Model:
          </label>
          <div
            className="emotion-6"
          >
            <select
              className="emotion-5"
              defaultValue=""
              id="models-list"
              name="models-list"
              onChange={[Function]}
            >
              <option
                disabled={true}
                value=""
              >
                Select a model...
              </option>
              <option
                value="621bf774-89d9-1244-9596-d6df43f1ede5"
              >
                console_face_recognition
              </option>
              <option
                value="621bf774-89d9-9596-1244-d6df43f1ede5"
              >
                console_cat_recognition
              </option>
            </select>
          </div>
          <div
            className="emotion-11"
          >
            <label
              className="emotion-7"
              htmlFor="asset-label"
            >
              Label:
            </label>
            <div
              className="emotion-9"
            >
              <input
                className="emotion-8"
                disabled={false}
                id="asset-label"
                name="asset-label"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="emotion-10"
            >
               
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <button
              className="emotion-12"
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <div
              className="emotion-13"
            />
            <button
              aria-disabled={true}
              className="emotion-14"
              onClick={[Function]}
              type="submit"
            >
              Save Label
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  .emotion-6 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-6:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-6:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  width: 100%;
  background-color: #191919;
}

.emotion-4 {
  padding: 16px;
}

<div
    className="emotion-6"
  >
    <div
      className="emotion-3"
      onClick={[Function]}
      style={Object {}}
    >
      <button
        aria-label="Collapse Section"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-0"
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <h4
        className="emotion-2"
      >
        Asset Labels: 0
      </h4>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        List
      </div>
    </div>
  </div>,
]
`;

exports[`<AssetLabeling /> should render with a selected asset 3`] = `
Array [
  .emotion-19 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-19:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-19:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-18 {
  width: 100%;
  background-color: #191919;
}

.emotion-17 {
  padding: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
  padding: 0;
}

.emotion-4 {
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  padding-bottom: 8px;
}

.emotion-5 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 100%;
  height: 40px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  padding-left: 12px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right 8px top 50%;
  background-size: 20px;
}

.emotion-11 {
  padding-top: 8px;
  width: 100%;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited {
  background-color: #808080;
}

.emotion-12:hover {
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true] {
  background-color: #808080;
}

.emotion-13 {
  padding: 8px;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited {
  background-color: #73b61c;
}

.emotion-14:hover {
  background-color: #96c955;
}

.emotion-14[aria-disabled=true] {
  background-color: #808080;
}

<div
    className="emotion-19"
  >
    <div
      className="emotion-3"
      onClick={[Function]}
      style={Object {}}
    >
      <button
        aria-label="Collapse Section"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-0"
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <h4
        className="emotion-2"
      >
        Select a model and add a label.
      </h4>
    </div>
    <div
      className="emotion-18"
    >
      <div
        className="emotion-17"
      >
        <form
          action=""
          className="emotion-16"
          method="post"
          onSubmit={[Function]}
        >
          <label
            className="emotion-4"
            htmlFor="models-list"
          >
            Model:
          </label>
          <div
            className="emotion-6"
          >
            <select
              className="emotion-5"
              defaultValue=""
              id="models-list"
              name="models-list"
              onChange={[Function]}
            >
              <option
                disabled={true}
                value=""
              >
                Select a model...
              </option>
              <option
                value="621bf774-89d9-1244-9596-d6df43f1ede5"
              >
                console_face_recognition
              </option>
              <option
                value="621bf774-89d9-9596-1244-d6df43f1ede5"
              >
                console_cat_recognition
              </option>
            </select>
          </div>
          <div
            className="emotion-11"
          >
            <label
              className="emotion-7"
              htmlFor="asset-label"
            >
              Label:
            </label>
            <div
              className="emotion-9"
            >
              <input
                className="emotion-8"
                disabled={false}
                id="asset-label"
                name="asset-label"
                onChange={[Function]}
                type="text"
                value="Flimflarm"
              />
            </div>
            <div
              className="emotion-10"
            >
               
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <button
              className="emotion-12"
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <div
              className="emotion-13"
            />
            <button
              className="emotion-14"
              onClick={[Function]}
              type="submit"
            >
              Save Label
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  .emotion-6 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-6:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-6:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  width: 100%;
  background-color: #191919;
}

.emotion-4 {
  padding: 16px;
}

<div
    className="emotion-6"
  >
    <div
      className="emotion-3"
      onClick={[Function]}
      style={Object {}}
    >
      <button
        aria-label="Collapse Section"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-0"
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <h4
        className="emotion-2"
      >
        Asset Labels: 0
      </h4>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        List
      </div>
    </div>
  </div>,
]
`;
